better photo update form

--- a/WebTech-Frontend/src/app/cat-details/cat-details.component.html
+++ b/WebTech-Frontend/src/app/cat-details/cat-details.component.html
@@ -7,27 +7,41 @@
     <div class="photos-grid">
         @for (photo of photos(); track photo){
         <article class="photo-card">
-            <header class="photo-header">
-                <h2>{{photo.title}}</h2>
-            </header>
 
-            <div class="photo-content">
-                <div class="image-container">
-                    <img [src]="photosUrls.get(photo.id)" alt="Cat" />
-                </div>
-                <div class="description-container">
+            <form class="photo-edit-form" [formGroup]="editPhotoForm" (ngSubmit)="editPhoto(photo)">
+                <header class="photo-header">
+                    <h2>{{photo.title}}</h2>
+                </header>
 
-                    @if (showPhotoEditor() !== photo.id){
-                    <quill-view [content]="createQuillElement(photo.description)"></quill-view>
-                    } @else {
-                    <form class="photo-edit-form" [formGroup]="editPhotoForm" (ngSubmit)="editPhoto(photo)">
+                <div class="photo-content">
+                    <div class="image-container">
+                        <img [src]="photosUrls.get(photo.id)" alt="Cat" />
+                    </div>
+                    <div class="description-container">
+
+                        @if (showPhotoEditor() !== photo.id){
+                        <quill-view [content]="createQuillElement(photo.description)"></quill-view>
+                        } @else {
                         <quill-editor formControlName="description" id="descr" class="descr-input"
                             placeholder="Enter photo description..."></quill-editor>
-                        <button type="submit" class="photo-edit-submit">Save</button>
-                    </form>
+                        }
+                    </div>
+                </div>
+
+                @if (authService.isAuthenticated() && verifyPhotoUploader(photo)){
+                <div class="photo-actions">
+                    @if (showPhotoEditor() !== photo.id){
+                    <button type="button" class="edit-cat-photo" (click)="showPhotoEditor.set(photo.id)">Edit
+                        Photo</button>
+                    <button type="button" class="delete-cat-photo" (click)="deletePhoto(photo)">Delete Photo</button>
+                    } @else {
+                    <button type="submit" class="edit-photo-submit">Submit</button>
+                    <button type="button" class="edit-photo-cancel" (click)="showPhotoEditor.set(-1)">Cancel</button>
                     }
                 </div>
-            </div>
+                }
+
+            </form>
 
             <div class="comment-section">
                 <ul class="comments-list">
@@ -70,17 +84,7 @@
 
             </div>
 
-            @if (authService.isAuthenticated() && verifyPhotoUploader(photo)){
-            <div class="photo-actions">
-                @if (showPhotoEditor() !== photo.id){
-                <button type="button" class="edit-cat-photo" (click)="showPhotoEditor.set(photo.id)">Edit Photo</button>
-                <button type="button" class="delete-cat-photo" (click)="deletePhoto(photo)">Delete Photo</button>
-                } @else {
-                <p>Work in Progress!</p>
-                <button type="button" class="edit-photo-cancel" (click)="showPhotoEditor.set(-1)">Cancel</button>
-                }
-            </div>
-            }
+
         </article>
         }
     </div>
