--- a/WebTech-Frontend/src/app/upload/upload.component.scss
+++ b/WebTech-Frontend/src/app/upload/upload.component.scss
@@ -36,8 +36,7 @@ section.upload-section {
                 color: whitesmoke;
             }
 
-            input,
-            quill-editor {
+            input {
                 width: 100%;
                 background-color: whitesmoke;
                 border: 2px solid darkgray;
