added cat-summary component

--- a/WebTech-Frontend/src/app/cats/cats.component.html
+++ b/WebTech-Frontend/src/app/cats/cats.component.html
@@ -7,10 +7,7 @@
     <ul>
         @for (cat of cats(); track cat){
         <li>
-            <h1>{{cat.name}}</h1>
-            <a [routerLink]="['/cats', cat.id]">
-                <img [src]="getProfilePictureUrl(cat)" alt="{{cat.name}}" />
-            </a>
+            <app-cat-summary [cat]="cat"></app-cat-summary>
         </li>
         }
     </ul>
